--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "build": "rm -rf .next && next build",
+    "build": "next build",
     "export": "next export",
+    "build:export": "yarn build && yarn export",
     "check": "yarn format && yarn lint && yarn stylelint",
     "dev": "next dev",
     "format": "prettier --log-level warn --write .",
@@ -28,10 +29,16 @@
     "@uniswap/sdk-core": "^4.2.0",
     "@uniswap/smart-order-router": "^3.26.1",
     "abitype": "^0.10.3",
+    "assert": "^2.1.0",
+    "browserify-zlib": "^0.2.0",
     "clsx": "^2.1.0",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
     "net": "^1.0.2",
     "next": "13.5.6",
     "next-pwa": "5.6.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "perfume.js": "9.2.0",
     "pino-pretty": "^10.3.1",
     "prettier-plugin-solidity": "^1.3.1",
@@ -43,7 +50,10 @@
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.0.0",
     "scroll-into-view-if-needed": "^3.1.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "unified": "^11.0.4",
+    "url": "^0.11.3",
     "viem": "2.x",
     "wagmi": "2",
     "workbox-webpack-plugin": "^7.0.0"
@@ -53,6 +63,7 @@
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@jest/globals": "^29.7.0",
+    "@netlify/plugin-nextjs": "^5.0.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
@@ -61,6 +72,7 @@
     "@types/jest": "^29.5.10",
     "@types/minipass": "^3.3.5",
     "@types/node": "^20",
+    "@types/path-browserify": "^1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
