--- a/package.json
+++ b/package.json
@@ -26,14 +26,19 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@rainbow-me/rainbowkit": "2",
     "@tanstack/react-query": "^5.20.1",
+    "@uniswap/sdk": "^3.0.3",
     "@uniswap/sdk-core": "^4.2.0",
     "@uniswap/smart-order-router": "^3.26.1",
+    "@uniswap/v2-sdk": "^4.3.0",
+    "@uniswap/v3-sdk": "^3.11.0",
     "abitype": "^0.10.3",
     "assert": "^2.1.0",
     "browserify-zlib": "^0.2.0",
     "clsx": "^2.1.0",
     "crypto-browserify": "^3.12.0",
+    "ethers": "^5.7.2",
     "https-browserify": "^1.0.0",
+    "jsbi": "^4.3.0",
     "net": "^1.0.2",
     "next": "13.5.6",
     "next-pwa": "5.6.0",
